added 2 new features

--- a/contactApp.html
+++ b/contactApp.html
@@ -60,6 +60,16 @@
                         <input type="text" id="addphone" class="form-control">
                         <label class="form-label" for="addphone">Phone Number</label>
                      </div>
+					 <!-- Email input -->
+					 <div class="form-outline mb-1">
+                        <input type="text" id="addemail" class="form-control">
+                        <label class="form-label" for="addemail">Email Address</label>
+                     </div>
+					 <!-- Timezone input -->
+					 <div class="form-outline mb-1">
+                        <input type="text" id="addtimezone" class="form-control">
+                        <label class="form-label" for="addtimezone">Timezone</label>
+                     </div>
                      <!-- Type dropdown -->
                      <div class="btn-group mb-2">
                         <button id="addtype" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -104,6 +114,16 @@
                      <div class="form-outline mb-1">
                         <input type="text" id="editphone" class="form-control">
                         <label class="form-label" for="editphone">Phone Number</label>
+                     </div>
+					 <!-- Email input -->
+					 <div class="form-outline mb-1">
+                        <input type="text" id="editemail" class="form-control">
+                        <label class="form-label" for="editemail">Email Address</label>
+                     </div>
+					 <!-- Timezone input -->
+					 <div class="form-outline mb-1">
+                        <input type="text" id="edittimezone" class="form-control">
+                        <label class="form-label" for="edittimezone">Timezone</label>
                      </div>
                      <!-- Type dropdown -->
                      <div class="btn-group mb-2">
